--- a/app/views/site/_main_banner_content.html.erb
+++ b/app/views/site/_main_banner_content.html.erb
@@ -22,7 +22,7 @@
     </div>
   <% else %>
     <div id="main-banner-logo">
-      <%= image_tag "SCP-logo.png", id: 'scp-logo' %><small id="beta-main" class="label label-danger">BETA</small>
+      <%= image_tag "SCP-logo.png", id: 'scp-logo' %>
       <p id='main-banner-tag-line' class="scp-banner-position">Reducing barriers and accelerating single-cell research</p>
     </div>
   <% end %>
