updating expression matrix UX file types

--- a/app/views/studies/_study_file_form.html.erb
+++ b/app/views/studies/_study_file_form.html.erb
@@ -44,7 +44,7 @@
   <div class="form-group row">
     <div class="col-sm-4">
       <%= f.label :file_type %><br />
-      <%= f.select :file_type, options_for_select(@file_types, study_file.file_type), {include_blank: 'Please select a file type'}, class: 'form-control file-type' %>
+      <%= f.select :file_type, options_for_select(StudyFile::STUDY_FILE_TYPE_NAME_HASH.invert, study_file.file_type), {include_blank: 'Please select a file type'}, class: 'form-control file-type' %>
     </div>
     <div class="col-sm-4 taxon-select-target">
       <% if StudyFile::TAXON_REQUIRED_TYPES.include?(study_file.file_type) || study_file.file_type == 'Analysis Output' %>
