--- a/app/javascript/styles/application.scss
+++ b/app/javascript/styles/application.scss
@@ -8,5 +8,6 @@
 @import './_resultsPanel.scss';
 @import './_studyOverview.scss';
 @import './_explore.scss';
+@import './_scatterPlot.scss';
 @import './_relatedGenesIdeogram.scss';
 @import './_inferCNVIdeogram.scss';
