Omit legend background color, fix code style

--- a/app/javascript/styles/_scatterPlot.scss
+++ b/app/javascript/styles/_scatterPlot.scss
@@ -13,7 +13,7 @@
   overflow: scroll;
   margin-top: 10px;
   margin-right: 10px;
-  background-color: #E5EEF7;
+  // background-color: #E5EEF7;
 }
 
 .scatter-legend-head {
