--- a/app/javascript/styles/_uploadWizard.scss
+++ b/app/javascript/styles/_uploadWizard.scss
@@ -100,11 +100,15 @@
   width: 100%;
   height: 100%;
   background: rgba(255, 255, 255, .6);
-  text-align: center;
-  padding-top: 3em;
+  text-align: right;
+  padding-top: 0.6em;
   font-size: 1.5em;
   color: #888;
   margin-left: 15px;
+}
+
+.upload-cancel-btn {
+  margin-right: 3em;
 }
 
 .preview-image {
