sentence case buttons

--- a/app/views/admin_configurations/_deployment.html.erb
+++ b/app/views/admin_configurations/_deployment.html.erb
@@ -31,7 +31,7 @@
           </div>
         </div></br>
         <div class="text-center">
-        <%= link_to "<i class='fas fa fa-trash'></i> Delete Notification".html_safe, delete_deployment_notification_path, class: 'btn btn-lg btn-danger', method: :delete%></div>
+        <%= link_to "<i class='fas fa fa-trash'></i> Delete notification".html_safe, delete_deployment_notification_path, class: 'btn btn-lg btn-danger', method: :delete%></div>
         </div>
       <%else %>
         <div class="row" id="deployment-form-group">
