--- a/app/views/admin_configurations/_firecloud_api_status.html.erb
+++ b/app/views/admin_configurations/_firecloud_api_status.html.erb
@@ -26,7 +26,7 @@
           <% end %>
         </tbody>
       </table>
-      <p class="text-center"><%= link_to 'Status Console', 'http://status.firecloud.org', class: 'btn btn-sm btn-primary',
+      <p class="text-center"><%= link_to 'Status console', 'http://status.firecloud.org', class: 'btn btn-sm btn-primary',
                                          target: :_blank, rel: 'noopener noreferrer' %></p>
     </div>
   </div>
