--- a/app/views/analysis_configurations/index.html.erb
+++ b/app/views/analysis_configurations/index.html.erb
@@ -39,7 +39,7 @@
         </table>
       </div>
     </div>
-    <p><%= scp_link_to "<i class='fas fa-plus'></i> New Analysis".html_safe, new_analysis_configuration_path,
+    <p><%= scp_link_to "<i class='fas fa-plus'></i> New analysis".html_safe, new_analysis_configuration_path,
                        class: 'btn btn-lg btn-success', id: 'new-analysis-configuration' %></p>
   </div>
 </div>
