--- a/app/views/branding_groups/_form.html.erb
+++ b/app/views/branding_groups/_form.html.erb
@@ -104,6 +104,6 @@
   </div>
 
   <div class="form-group">
-    <%= f.submit 'Update Collection', class: 'btn btn-lg btn-success', id: 'save-branding-group' %>
+    <%= f.submit 'Update collection', class: 'btn btn-lg btn-success', id: 'save-branding-group' %>
   </div>
 <% end %>
