--- a/app/views/feature_announcements/index.html.erb
+++ b/app/views/feature_announcements/index.html.erb
@@ -1,6 +1,6 @@
 <h1>
   Feature Announcements
-  <%= link_to "View Live", latest_feature_announcements_path, class: 'pull-right btn btn-success' %>
+  <%= link_to "View live", latest_feature_announcements_path, class: 'pull-right btn btn-success' %>
 </h1>
 <div class="row">
   <div class="col-md-12">
@@ -60,7 +60,7 @@
   </div>
 </div>
 
-<p><%= link_to 'New Announcement', new_feature_announcement_path, class: 'btn btn-lg btn-success' %></p>
+<p><%= link_to 'New announcement', new_feature_announcement_path, class: 'btn btn-lg btn-success' %></p>
 
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
 
