--- a/app/views/preset_searches/index.html.erb
+++ b/app/views/preset_searches/index.html.erb
@@ -53,7 +53,7 @@
   </div>
 </div>
 
-<p><%= scp_link_to "<i class='fas fa-plus'></i> New Preset Search".html_safe, new_preset_search_path,
+<p><%= scp_link_to "<i class='fas fa-plus'></i> New preset search".html_safe, new_preset_search_path,
                    class: 'btn btn-lg btn-success', id: 'new-preset-search' %></p>
 
 <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
