--- a/app/views/site/_study_description_edit.html.erb
+++ b/app/views/site/_study_description_edit.html.erb
@@ -19,7 +19,7 @@
 
   <div class="form-group row">
     <div class="col-xs-12 text-center">
-      <%= f.submit 'Update Description', class: 'btn btn-lg btn-success', id: 'update-study-description' %>
+      <%= f.submit 'Update description', class: 'btn btn-lg btn-success', id: 'update-study-description' %>
     </div>
   </div>
 
