--- a/app/views/site/analysis/_submit_workflow.html.erb
+++ b/app/views/site/analysis/_submit_workflow.html.erb
@@ -16,7 +16,7 @@
           </div>
           <div class="col-sm-3">
             <label>View Workflow</label><br />
-            <%= link_to 'View Selected WDL', '#/', class: 'btn btn-default', id: 'view-selected-wdl', 'data-loading-text' => 'Loading... Please wait.' %>
+            <%= link_to 'View selected WDL', '#/', class: 'btn btn-default', id: 'view-selected-wdl', 'data-loading-text' => 'Loading... Please wait.' %>
           </div>
         </div>
         <div id="wdl-content-target">
@@ -36,7 +36,7 @@
         </div>
         <div class="row">
           <div class="col-sm-offset-3 col-sm-6 hidden text-center">
-            <%= f.submit 'Submit Workflow', class: 'btn btn-lg btn-success', id: 'submit-workflow' %>
+            <%= f.submit 'Submit workflow', class: 'btn btn-lg btn-success', id: 'submit-workflow' %>
           </div>
         </div>
       </div>
