--- a/app/views/admin_configurations/_form.html.erb
+++ b/app/views/admin_configurations/_form.html.erb
@@ -47,7 +47,7 @@
     </div>
     <div class="form-group row">
       <div class="col-sm-12">
-        <%= f.submit 'Save Configuration', class: 'btn btn-success', id: 'save-configuration' %>
+        <%= f.submit 'Save configuration', class: 'btn btn-success', id: 'save-configuration' %>
       </div>
     </div>
 
