--- a/app/views/admin_configurations/edit_user.html.erb
+++ b/app/views/admin_configurations/edit_user.html.erb
@@ -39,7 +39,7 @@
   </div>
   <div class="form-group row">
     <div class="col-md-12">
-      <%= f.submit 'Update User', class: 'btn btn-lg btn-success', id: 'save-user' %>
+      <%= f.submit 'Update user', class: 'btn btn-lg btn-success', id: 'save-user' %>
     </div>
   </div>
 
