--- a/app/views/billing_projects/new_user.html.erb
+++ b/app/views/billing_projects/new_user.html.erb
@@ -28,7 +28,7 @@
       </div>
       <div class="col-md-3">
         <%= f.label :submit, "&nbsp;".html_safe %><br />
-        <%= f.submit 'Add User', class: 'btn btn-success', id: 'add-billing-project-user', disabled: true %>
+        <%= f.submit 'Add user', class: 'btn btn-success', id: 'add-billing-project-user', disabled: true %>
       </div>
     </div>
   <% end %>
