--- a/app/views/reports/_contact_modal.html.erb
+++ b/app/views/reports/_contact_modal.html.erb
@@ -15,7 +15,7 @@
             <%= f.text_area :message %>
           </div>
           <div class="form-group">
-            <%= f.submit 'Send Request', class: 'btn btn-lg btn-success', id: 'send-report-request' %>
+            <%= f.submit 'Send request', class: 'btn btn-lg btn-success', id: 'send-report-request' %>
             <%= link_to 'Cancel', '#/', class: 'btn btn-lg btn-warning pull-right', data: {dismiss: 'modal'} %>
           </div>
         <% end %>
