--- a/app/views/reports/report_request.html.erb
+++ b/app/views/reports/report_request.html.erb
@@ -9,7 +9,7 @@
     <%= f.text_area :message %>
   </div>
   <div class="form-group">
-    <%= f.submit 'Send Request', class: 'btn btn-lg btn-success', id: 'send-report-request' %>
+    <%= f.submit 'Send request', class: 'btn btn-lg btn-success', id: 'send-report-request' %>
     <%= link_to 'Cancel', reports_path, class: 'btn btn-lg btn-warning pull-right' %>
   </div>
 <% end %>
