--- a/app/views/site/_main_banner_content.html.erb
+++ b/app/views/site/_main_banner_content.html.erb
@@ -1,7 +1,7 @@
 <div class="mask" id="main-banner">
   <% if FeatureAnnouncement.latest_features? %>
     <%= scp_link_to "<span class='badge'>#{FeatureAnnouncement.latest.count}</span> " \
-                    "#{pluralize_without_count(FeatureAnnouncement.latest.count, "New Feature")}".html_safe,
+                    "#{pluralize_without_count(FeatureAnnouncement.latest.count, "New feature")}".html_safe,
                     latest_feature_announcements_path, class: 'btn btn-warning', id: 'latest-features-btn',
                     data: { toggle: 'tooltip', placement: 'left' }, title: 'Learn about new Single Cell Portal features!' %>
   <% end %>
