--- a/app/views/site/_study_description_view.html.erb
+++ b/app/views/site/_study_description_view.html.erb
@@ -5,7 +5,7 @@
   <%= @study.full_description.html_safe %>
 </div>
 <% if user_signed_in? && @study.can_edit?(current_user) %>
-  <p><%= link_to "<i class='fas fa-fw fa-edit'></i> Edit Description".html_safe, '#/', class: 'btn btn-primary', id: 'edit-study-description' %></p>
+  <p><%= link_to "<i class='fas fa-fw fa-edit'></i> Edit description".html_safe, '#/', class: 'btn btn-primary', id: 'edit-study-description' %></p>
 
   <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
 
