--- a/app/views/site/_study_settings_form.html.erb
+++ b/app/views/site/_study_settings_form.html.erb
@@ -148,17 +148,17 @@
         </div>
       <% end %>
     <% end %>
-    <%= f.link_to_add "<span class='fas fa-plus'></span> Share Study".html_safe, :study_shares, class: 'btn btn-primary', id: 'add-study-share' %>
+    <%= f.link_to_add "<span class='fas fa-plus'></span> Share study".html_safe, :study_shares, class: 'btn btn-primary', id: 'add-study-share' %>
   </div>
   <div class="form-group row">
     <div class="col-xs-12 text-center">
-      <%= link_to 'Update Study Settings', '#', class: 'btn btn-lg btn-success', id: 'update-study-settings' %>
+      <%= link_to 'Update study settings', '#', class: 'btn btn-lg btn-success', id: 'update-study-settings' %>
     </div>
   </div>
   <div class="form-group row">
     <div class="col-xs-12 text-center">
-      <%= scp_link_to "<span class='fas fa-upload'></span> Upload/Edit Data".html_safe, initialize_study_path(@study), class: "btn btn-sm btn-primary #{@study.url_safe_name}-upload" %>
-      <%= scp_link_to "<span class='fas fa-sync-alt'></span> Sync Workspace".html_safe, sync_study_path(@study), class: "btn btn-sm btn-warning #{@study.url_safe_name}-sync sync-button" %>
+      <%= scp_link_to "<span class='fas fa-upload'></span> Upload/Edit data".html_safe, initialize_study_path(@study), class: "btn btn-sm btn-primary #{@study.url_safe_name}-upload" %>
+      <%= scp_link_to "<span class='fas fa-sync-alt'></span> Sync workspace".html_safe, sync_study_path(@study), class: "btn btn-sm btn-warning #{@study.url_safe_name}-sync sync-button" %>
     </div>
   </div>
 <% end %>
