--- a/app/views/studies/_study_default_options_form.html.erb
+++ b/app/views/studies/_study_default_options_form.html.erb
@@ -50,7 +50,7 @@
       </div>
       <div class="form-group row">
         <div class="col-sm-12 text-center">
-          <%= f.submit 'Update Defaults', class: 'btn btn-success' %>
+          <%= f.submit 'Update defaults', class: 'btn btn-success' %>
         </div>
       </div>
     </div>
