--- a/app/views/studies/edit.html.erb
+++ b/app/views/studies/edit.html.erb
@@ -2,5 +2,5 @@
 
 <%= render 'form' %>
 
-<p><%= scp_link_to "<span class='fas fa-upload'></span> Upload/Edit Data".html_safe, upload_study_path(@study), class: 'btn btn-success' %>
+<p><%= scp_link_to "<span class='fas fa-upload'></span> Upload/Edit data".html_safe, upload_study_path(@study), class: 'btn btn-success' %>
 	<%= scp_link_to "<span class='fas fa-chevron-left'></span> Back".html_safe, studies_path, class: 'btn btn-warning' %></p>
