--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -25,20 +25,20 @@
               <td id="<%= study.url_safe_name %>-study-file-count"><%= study.total_file_count %></td>
 							<td>
                 <% if study.can_edit?(current_user) %>
-                  <%= scp_link_to "<span class='fas fa-info-circle'></span> Show Details".html_safe, study_path(study), 
-                    class: "btn btn-xs btn-info #{study.url_safe_name}-show", title: 'View/Edit your Study description' , data: {toggle: 'tooltip', placement: 'top'} %>
-                  <%= scp_link_to "<span class='fas fa-upload'></span> Upload/Edit Data".html_safe, initialize_study_path(study), 
+                  <%= scp_link_to "<span class='fas fa-info-circle'></span> Show details".html_safe, study_path(study), 
+                    class: "btn btn-xs btn-info #{study.url_safe_name}-show", title: 'View/Edit your study description' , data: {toggle: 'tooltip', placement: 'top'} %>
+                  <%= scp_link_to "<span class='fas fa-upload'></span> Upload/Edit data".html_safe, initialize_study_path(study), 
                   class: "btn btn-xs btn-success #{study.url_safe_name}-upload", title: 'Add new files to your study' , data: {toggle: 'tooltip', placement: 'top'}  %>
-                  <%= scp_link_to "<span class='fas fa-sync-alt'></span> Sync Workspace".html_safe, sync_study_path(study), 
-                  class: "btn btn-xs btn-warning #{study.url_safe_name}-sync sync-button", title: 'Sync files from your workspace to your Study' , data: {toggle: 'tooltip', placement: 'top'} %>
-                  <%= scp_link_to "<span class='fas fa-edit'></span> Edit Study".html_safe, edit_study_path(study), 
-                  class: "btn btn-xs btn-primary #{study.url_safe_name}-edit", title: 'View/Update the settings for your Study' , data: {toggle: 'tooltip', placement: 'top'} %>
+                  <%= scp_link_to "<span class='fas fa-sync-alt'></span> Sync workspace".html_safe, sync_study_path(study), 
+                  class: "btn btn-xs btn-warning #{study.url_safe_name}-sync sync-button", title: 'Sync files from your workspace to your study' , data: {toggle: 'tooltip', placement: 'top'} %>
+                  <%= scp_link_to "<span class='fas fa-edit'></span> Edit study".html_safe, edit_study_path(study), 
+                  class: "btn btn-xs btn-primary #{study.url_safe_name}-edit", title: 'View/Update the settings for your study' , data: {toggle: 'tooltip', placement: 'top'} %>
                   <% if study.can_delete?(current_user) %>
-                    <%= scp_link_to "<span class='fas fa-trash'></span> Delete Study & Workspace".html_safe, study_path(study),
+                    <%= scp_link_to "<span class='fas fa-trash'></span> Delete study & workspace".html_safe, study_path(study),
                                     class: "btn btn-xs btn-danger delete-btn #{study.url_safe_name}-delete",
                                     title: 'Delete everything, including Terra workspace' , method: :delete,
                                     data: {toggle: 'tooltip', placement: 'top'} %>
-                    <%= scp_link_to "<span class='fas fa-trash'></span> Delete Study Only".html_safe, study_path(id: study.id, workspace: 'persist'),
+                    <%= scp_link_to "<span class='fas fa-trash'></span> Delete study only".html_safe, study_path(id: study.id, workspace: 'persist'),
                                     class: "btn btn-xs btn-danger delete-btn #{study.url_safe_name}-delete-local",
                                     title: 'Delete all database records but keep Terra workspace' , method: :delete,
                                     data: {toggle: 'tooltip', placement: 'top', workspace: 'persist'} %>
@@ -52,7 +52,7 @@
 			</div>
 		</div>
 		<p>
-      <%= scp_link_to "<span class='fas fa-fw fa-plus'></span> New Study".html_safe, new_study_path, class: 'btn btn-lg btn-success', id: 'create-new-study' %>
+      <%= scp_link_to "<span class='fas fa-fw fa-plus'></span> New study".html_safe, new_study_path, class: 'btn btn-lg btn-success', id: 'create-new-study' %>
     </p>
 	</div>
 </div>
