--- a/app/views/taxons/_form.html.erb
+++ b/app/views/taxons/_form.html.erb
@@ -52,7 +52,7 @@
   </div>
   <div class="form-group row">
     <div class="col-sm-12">
-      <%= f.link_to_add "<span class='fas fa-plus'></span> Add an Assembly".html_safe, :genome_assemblies, class: 'btn btn-sm btn-primary',
+      <%= f.link_to_add "<span class='fas fa-plus'></span> Add an assembly".html_safe, :genome_assemblies, class: 'btn btn-sm btn-primary',
                         id: 'add-genome-assembly' %>
     </div>
   </div>
