--- a/app/views/taxons/index.html.erb
+++ b/app/views/taxons/index.html.erb
@@ -43,7 +43,7 @@
     </div>
     <div class="form-group row">
       <div class="col-sm-2">
-        <%= link_to "<i class='fas fa-plus'></i> Manually Register Species".html_safe, new_taxon_path, class: 'btn btn-success' %>
+        <%= link_to "<i class='fas fa-plus'></i> Manually register species".html_safe, new_taxon_path, class: 'btn btn-success' %>
       </div>
       <div class="col-sm-4">
         <%= form_tag(upload_species_list_path, id: 'upload-species-list-form', multipart: true) do %>
