--- a/app/views/user_annotations/index.html.erb
+++ b/app/views/user_annotations/index.html.erb
@@ -25,13 +25,13 @@
                 <td><%= user_annotation.source_resolution_label %></td>
                 <td><%= user_annotation.user.email %></td>
                 <td>
-                  <%= scp_link_to "<span class='fas fa-chart-bar'></span> Plot Annotation".html_safe, view_study_path(accession: user_annotation.study.accession, study_name: user_annotation.study.url_safe_name, cluster: user_annotation.cluster_group.name, annotation: user_annotation.formatted_annotation_identifier) + '#study-visualize', class: "btn btn-xs btn-info #{user_annotation.name_as_id}-show"  %>
+                  <%= scp_link_to "<span class='fas fa-chart-bar'></span> Plot annotation".html_safe, view_study_path(accession: user_annotation.study.accession, study_name: user_annotation.study.url_safe_name, cluster: user_annotation.cluster_group.name, annotation: user_annotation.formatted_annotation_identifier) + '#study-visualize', class: "btn btn-xs btn-info #{user_annotation.name_as_id}-show"  %>
                   <% if user_annotation.can_edit?(current_user) %>
                     <%= scp_link_to "<span class='fas fa-edit'></span> Edit".html_safe, edit_user_annotation_path(user_annotation), class: "btn btn-xs btn-primary #{user_annotation.name_as_id}-edit" %>
                   <% end %>
                   <%= link_to "<span class='fas fa-download'></span> Download".html_safe, download_user_annotation_path(user_annotation), class: "btn btn-xs btn-success #{user_annotation.name_as_id}-download" %>
                   <% if user_annotation.can_edit_study?(current_user) %>
-                      <%= scp_link_to "<span class='fas fa-book'></span> Publish to Study".html_safe, publish_to_study_path(user_annotation), class: "btn btn-xs btn-warning publish-btn #{user_annotation.name_as_id}-publish", data: {toggle: 'tooltip', placement: 'top'}, title: 'Publish annotation to study (will this annotation remove from your list)' %>
+                      <%= scp_link_to "<span class='fas fa-book'></span> Publish to study".html_safe, publish_to_study_path(user_annotation), class: "btn btn-xs btn-warning publish-btn #{user_annotation.name_as_id}-publish", data: {toggle: 'tooltip', placement: 'top'}, title: 'Publish annotation to study (will this annotation remove from your list)' %>
                   <% end %>
                   <% if user_annotation.can_delete?(current_user) %>
                       <%= scp_link_to "<span class='fas fa-trash'></span> Delete".html_safe, user_annotation_path(user_annotation), class: "btn btn-xs btn-danger delete-btn #{user_annotation.name_as_id}-delete", method: :delete %>
