--- a/app/views/analysis_configurations/index.html.erb
+++ b/app/views/analysis_configurations/index.html.erb
@@ -50,7 +50,7 @@
         pagingType: "full_numbers",
         order: [[0, 'asc']],
         language: {
-            search: "Filter Results By: "
+            search: "Filter results by: "
         }
     });
 
