--- a/app/views/billing_projects/storage_estimate.html.erb
+++ b/app/views/billing_projects/storage_estimate.html.erb
@@ -53,7 +53,7 @@
         pagingType: "full_numbers",
         order: [[1, 'desc']],
         language: {
-            search: "Filter Results By: "
+            search: "Filter results by: "
         }
     });
 
