--- a/app/views/feature_announcements/index.html.erb
+++ b/app/views/feature_announcements/index.html.erb
@@ -69,7 +69,7 @@
     pageLength: 10,
     order: [[0, 'desc']],
     language: {
-      search: "Filter Results By: "
+      search: "Filter results by: "
     }
   });
 
