--- a/app/views/preset_searches/index.html.erb
+++ b/app/views/preset_searches/index.html.erb
@@ -63,7 +63,7 @@
         pageLength: 10,
         order: [[0, 'asc']],
         language: {
-            search: "Filter Results By: "
+            search: "Filter results by: "
         }
     });
 
