--- a/app/views/profiles/_user_firecloud_profile.html.erb
+++ b/app/views/profiles/_user_firecloud_profile.html.erb
@@ -17,11 +17,11 @@
     <h4>User Info</h4>
     <div class="row">
       <div class="col-md-6">
-        <%= f.label :firstName, 'First Name' %><br />
+        <%= f.label :firstName, 'First name' %><br />
         <%= f.text_field :firstName, class: 'form-control' %>
       </div>
       <div class="col-md-6">
-        <%= f.label :lastName, 'Last Name' %><br />
+        <%= f.label :lastName, 'Last name' %><br />
         <%= f.text_field :lastName, class: 'form-control' %>
       </div>
     </div>
@@ -31,7 +31,7 @@
         <%= f.text_field :title, class: 'form-control' %>
       </div>
       <div class="col-md-6">
-        <%= f.label :contactEmail, 'Contact Email for Notifications' %><br />
+        <%= f.label :contactEmail, 'Contact email for notifications' %><br />
         <%= f.text_field :contactEmail, class: 'form-control' %>
       </div>
     </div>
@@ -41,7 +41,7 @@
         <%= f.text_field :institute, class: 'form-control' %>
       </div>
       <div class="col-md-6">
-        <%= f.label :institutionalProgram, 'Institutional Program' %><br />
+        <%= f.label :institutionalProgram, 'Institutional program' %><br />
         <%= f.text_field :institutionalProgram, class: 'form-control' %>
       </div>
     </div>
@@ -50,11 +50,11 @@
     <h4>Program Info</h4>
     <div class="row">
       <div class="col-md-6">
-        <%= f.label :nonProfitStatus, 'Non-Profit Status' %><br />
+        <%= f.label :nonProfitStatus, 'Non-Profit status' %><br />
         <%= f.select :nonProfitStatus, options_for_select([['Non-Profit', 'true'], ['For-Profit', 'false']], @fire_cloud_profile.nonProfitStatus), {}, class: 'form-control' %>
       </div>
       <div class="col-md-6">
-        <%= f.label :pi, 'Principal Investigator' %><br />
+        <%= f.label :pi, 'Principal investigator' %><br />
         <%= f.text_field :pi, class: 'form-control' %>
       </div>
     </div>
