--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -32,7 +32,7 @@
           <th>Study</th>
           <th>Project</th>
           <th>Permission</th>
-          <th>Email Delivery Status</th>
+          <th>Email delivery status</th>
         </tr>
         </thead>
         <tbody>
