--- a/app/views/site/analysis/_submission_history.html.erb
+++ b/app/views/site/analysis/_submission_history.html.erb
@@ -41,7 +41,7 @@
     pagingType: "full_numbers",
     order: [[0, 'desc']],
     language: {
-      search: "Filter Results By: "
+      search: "Filter results by: "
     },
     columns: [
       {data: 'submission_date'},
