--- a/app/views/user_annotations/index.html.erb
+++ b/app/views/user_annotations/index.html.erb
@@ -7,11 +7,11 @@
           <thead>
             <tr>
               <th>Name</th>
-              <th>Annotation Labels</th>
+              <th>Annotation labels</th>
               <th>Study</th>
-              <th>Source Cluster</th>
-              <th>Source Resolution</th>
-              <th>Created By</th>
+              <th>Source cluster</th>
+              <th>Source resolution</th>
+              <th>Created by</th>
               <th class="actions">Actions</th>
             </tr>
           </thead>
@@ -52,7 +52,7 @@
         pagingType: "full_numbers",
         order: [[2, 'desc'], [0, 'desc']],
         language: {
-            search: "Filter Results By: "
+            search: "Filter results by: "
         }
     });
     // ask user to confirm delete, then show modal
