--- a/app/views/admin_configurations/index.html.erb
+++ b/app/views/admin_configurations/index.html.erb
@@ -129,7 +129,7 @@
               pagingType: "full_numbers",
               order: [[0, 'asc']],
               language: {
-                  search: "Filter Results By: "
+                  search: "Filter results by: "
               }
           });
 
@@ -226,7 +226,7 @@
               pagingType: "full_numbers",
               order: [[0, 'asc']],
               language: {
-                  search: "Filter Results By: "
+                  search: "Filter results by: "
               }
           });
       </script>
