--- a/app/views/billing_projects/workspaces.html.erb
+++ b/app/views/billing_projects/workspaces.html.erb
@@ -66,7 +66,7 @@
         pagingType: "full_numbers",
         order: [[0, 'asc']],
         language: {
-            search: "Filter Results By: "
+            search: "Filter results by: "
         }
     });
 
