--- a/app/views/site/_reviewer_access_fields.html.erb
+++ b/app/views/site/_reviewer_access_fields.html.erb
@@ -2,7 +2,7 @@
   <div class="form-group row">
     <div class="col-md-2">
       <% access_enabled = f.object.persisted? %>
-      <%= label_tag :_destroy, 'Access Enabled?' %><br />
+      <%= label_tag :_destroy, 'Access enabled?' %><br />
       <div class="btn-group btn-toggle" data-toggle="buttons">
         <label class="btn btn-default <%= access_enabled ? 'active' : nil %>">
           <%= radio_button_tag 'reviewer_access_actions[enable]', :yes, access_enabled, disabled: !access_enabled %> Yes
@@ -13,11 +13,11 @@
       </div>
     </div>
     <div class="col-md-2">
-      <%= f.label :expires_at, 'Expiration Date' %><br />
+      <%= f.label :expires_at, 'Expiration date' %><br />
       <%= f.date_field :expires_at, class: 'form-control' %>
     </div>
     <div class="col-md-2">
-      <%= label_tag :reset, 'Reset Access Credentials?' %><br />
+      <%= label_tag :reset, 'Reset access credentials?' %><br />
       <div class="btn-group btn-toggle" data-toggle="buttons">
         <label class="btn btn-default">
           <%= radio_button_tag 'reviewer_access_actions[reset]', :yes, false %> Yes
@@ -28,7 +28,7 @@
       </div>
     </div>
     <div class="col-md-6 left-border-0-5-gray">
-      <h4>Current Reviewer Access Credentials <a id="copy-reviewer-creds" class="btn btn-default btn-sm btn-copy"
+      <h4>Current reviewer access credentials <a id="copy-reviewer-creds" class="btn btn-default btn-sm btn-copy"
                                              data-toggle="tooltip" title="" data-original-title="Show PIN & copy to clipboard">
                                              <i class="far fa-copy"></i></a>
       </h4>
