--- a/app/views/studies/_form.html.erb
+++ b/app/views/studies/_form.html.erb
@@ -17,7 +17,7 @@
 			<%= f.text_field :name, class: 'form-control', autocomplete: 'off' %>
 		</div>
     <div class="col-md-4">
-      <%= f.label :firecloud_project, 'Terra Billing Project' %><br />
+      <%= f.label :firecloud_project, 'Terra billing project' %><br />
       <% if @study.new_record? %>
         <%= f.select :firecloud_project, options_for_select(@projects, @study.firecloud_project),
                      {include_blank: 'Please select a billing project'}, class: 'form-control' %>
@@ -30,7 +30,7 @@
   </div>
   <div class="form-group row">
 		<div class="col-md-3">
-      <%= f.label :embargo, 'Data Release Date' %>&nbsp;<span class='fas fa-question-circle' data-toggle='tooltip' title='Setting a Data Release Date will prevent downloads for everyone except study owners & shared users, and will expire at 12AM on the date specified (leave blank to allow downloads)' data-placement='right'></span><br />
+      <%= f.label :embargo, 'Data release date' %>&nbsp;<span class='fas fa-question-circle' data-toggle='tooltip' title='Setting a data release date will prevent downloads for everyone except study owners & shared users, and will expire at 12AM on the date specified (leave blank to allow downloads)' data-placement='right'></span><br />
 			<%= f.text_field :embargo, class: 'form-control datepicker' %>
 		</div>
 		<div class="col-md-2">
@@ -45,7 +45,7 @@
                      {}, {class: 'form-control'} %>
       </div>
       <div class="col-md-4">
-        <%= f.label :firecloud_workspace, 'Existing Terra Workspace' %><br />
+        <%= f.label :firecloud_workspace, 'Existing Terra workspace' %><br />
         <%= f.text_field :firecloud_workspace, class: 'form-control', disabled: !@study.use_existing_workspace %>
       </div>
       <% else %>
@@ -60,7 +60,7 @@
     <div class="form-group">
       <div class="row">
         <div class="col-md-6">
-          <%= f.label :branding_group_id, 'Add to a Brand' %> <span class='fas fa-question-circle' data-toggle='tooltip' title='Add this study to a brand to allow special look & feel rules when viewing in "branded" mode' data-placement='right'></span><br />
+          <%= f.label :branding_group_id, 'Add to a brand' %> <span class='fas fa-question-circle' data-toggle='tooltip' title='Add this study to a brand to allow special look & feel rules when viewing in "branded" mode' data-placement='right'></span><br />
           <%= f.select :branding_group_id, options_from_collection_for_select(current_user.available_branding_groups, 'id', 'name', @study.branding_group_id),
                        {include_blank: 'No Selected Brand'}, class: 'form-control' %>
         </div>
