--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -78,7 +78,7 @@
         pageLength: 25,
         order: [[0, 'asc']],
         language: {
-            search: "Filter Results By: "
+            search: "Filter results by: "
         }
     });
 
