--- a/app/views/taxons/index.html.erb
+++ b/app/views/taxons/index.html.erb
@@ -66,7 +66,7 @@
           pageLength: 10,
           order: [[0, 'asc']],
           language: {
-              search: "Filter Results By: "
+              search: "Filter results by: "
           }
       });
 
