--- a/app/views/admin_configurations/compose_users_email.html.erb
+++ b/app/views/admin_configurations/compose_users_email.html.erb
@@ -1,4 +1,4 @@
-<h1>Send an Email to all Users <span class="badge"><%= User.count %> users</span> </h1>
+<h1>Send an email to all users <span class="badge"><%= User.count %> users</span> </h1>
 <div class="bs-callout bs-callout-default">
   <h4>Instructions</h4>
   <p>Use this form to send an email to all registered user accounts in the portal.  All messages delivered will have
