--- a/app/views/admin_configurations/index.html.erb
+++ b/app/views/admin_configurations/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Admin Control Panel</h1>
+<h1>Admin control panel</h1>
 <div class="container-fluid" id="tab-root">
   <ul class="nav nav-tabs" role="tablist" id="study-tabs">
     <li role="presentation" class="admin-nav active" id="admin-config-nav"><a href="#admin-config" data-toggle="tab">Configuration Options<i class="fas fa-fw fa-cog"></i></a></li>
@@ -42,7 +42,7 @@
               <p><%= link_to "<span class='fas fa-plus'></span> New config option".html_safe, new_admin_configuration_path, class: 'btn btn-success', id: 'create-new-configuration' %>&nbsp;</p>
             </div>
           </div>
-          <h3>Other Tasks</h3>
+          <h3>Other tasks</h3>
           <div class="well well-lg">
             <div class="form-group row">
               <div class="col-md-5">
@@ -111,7 +111,7 @@
         <div class="modal-dialog">
           <div class="modal-content">
             <div class="modal-header">
-              <h4 class="text-center">Working... Please Wait</h4>
+              <h4 class="text-center">Working... please wait</h4>
             </div>
             <div class="modal-body">
               <div class="spinner-target" id="working-modal-spinner"></div>
