--- a/app/views/billing_projects/index.html.erb
+++ b/app/views/billing_projects/index.html.erb
@@ -1,4 +1,4 @@
-<h1 class="bottom-pad">My Terra Billing Projects
+<h1 class="bottom-pad">My Terra billing projects
   <%= scp_link_to "Create a billing project <i class='fas fa-external-link-alt'></i>".html_safe, 'https://app.terra.bio/#billing',
                   class: 'btn btn-default pull-right', target: :_blank, rel: 'noopener noreferrer',
                   data: { toggle: 'tooltip', placement: 'left' },
