--- a/app/views/feature_flag_options/edit.html.erb
+++ b/app/views/feature_flag_options/edit.html.erb
@@ -1,4 +1,4 @@
-<h1>Feature Flags for <%= get_instance_label(@instance) %></h1>
+<h1>Feature flags for <%= get_instance_label(@instance) %></h1>
 
 <%= nested_form_for(@instance,
                     url: feature_flag_option_path(class_name: params[:class_name], id: params[:id]),
