--- a/app/views/feature_flag_options/index.html.erb
+++ b/app/views/feature_flag_options/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Manage Feature Flag Options</h1>
+<h1>Manage feature flag options</h1>
 <p class="lead">Use the form below to load an object and set feature flag values.</p>
 
 <%= form_tag(find_feature_flag_entity_path, html: { class: 'form' }) do %>
@@ -24,7 +24,7 @@
   </div>
 <% end %>
 
-<h2>Current Feature Flag Usage</h2>
+<h2>Current feature flag usage</h2>
 <div class="row">
   <div class="col-md-12">
     <div class="table-responsive">
