--- a/app/views/profiles/accept_tos.html.erb
+++ b/app/views/profiles/accept_tos.html.erb
@@ -1,4 +1,4 @@
-<h1 id="tos-title">Terms of Service, revised [<%= TosAcceptance.current_version %>]</h1>
+<h1 id="tos-title">Terms of service, revised [<%= TosAcceptance.current_version %>]</h1>
 <div id="tos-content">
   <%= render :partial => '/site/tos_content' %>
 </div>
