--- a/app/views/studies/initialize_study.html.erb
+++ b/app/views/studies/initialize_study.html.erb
@@ -6,7 +6,7 @@
 
   <div class="row">
     <div class="col-sm-10">
-      <h1>Upload/Edit Study Data for '<%= @study.name %>' <%= render partial: 'initialize_study_label' %></h1>
+      <h1>Upload/Edit study data for '<%= @study.name %>' <%= render partial: 'initialize_study_label' %></h1>
     </div>
     <div class="col-sm-2">
       <p class="top-pad pull-right">
