--- a/app/views/studies/new.html.erb
+++ b/app/views/studies/new.html.erb
@@ -1,6 +1,6 @@
-<h1>New Study</h1>
+<h1>New study</h1>
 <div class="bs-callout bs-callout-default" id="firecloud-disclaimer">
-  <h4>Data File Storage & Workspaces</h4>
+  <h4>Data file storage & workspaces</h4>
   <p>All uploaded data files for studies are stored in <%= link_to 'Terra', 'https://app.terra.bio/', target: :_blank,
                                                                    rel: 'noopener noreferrer' %> workspaces.
     If you do not already have a Terra account, you will receive an invitation email after you create your study.
@@ -9,7 +9,7 @@
     letting you know that the Single Cell Portal service account has shared the study workspace with you.</p>
   <p>You may also create a study based on an existing workspace you already own.  To do so, select <strong>'Yes'</strong>
     under <strong>'Use Existing Workspace'</strong> and then provide the name in the text box.</p>
-  <h4>Billing Projects</h4>
+  <h4>Billing projects</h4>
   <p>You must select a billing project when creating your study.  You may use the default project, but you will not be
     allowed to run any computes in your workspace.  If you wish to run computes, then you must
     <%= scp_link_to 'create a billing project', billing_projects_path %> (using a Google billing account that you own)
