--- a/app/views/analysis_configurations/index.html.erb
+++ b/app/views/analysis_configurations/index.html.erb
@@ -1,4 +1,4 @@
-<h1>Analysis Config Panel</h1>
+<h1>Analysis config panel</h1>
 <div class="row">
   <div class="col-md-12">
     <div class="table-responsive">
