--- a/app/views/analysis_configurations/new.html.erb
+++ b/app/views/analysis_configurations/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Analysis</h1>
+<h1>New analysis</h1>
 <div class="bs-callout bs-callout-info">
   <p>Use this form to register a new analysis into the portal.  Users who have compute privileges on studies will see the
     'Analysis' tab enabled, and this analysis will be available in the dropdown menu for users to select.  Once the analysis
