--- a/app/views/feature_announcements/index.html.erb
+++ b/app/views/feature_announcements/index.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  Feature Announcements
+  Feature announcements
   <%= link_to "View live", latest_feature_announcements_path, class: 'pull-right btn btn-success' %>
 </h1>
 <div class="row">
