--- a/app/views/feature_announcements/latest.html.erb
+++ b/app/views/feature_announcements/latest.html.erb
@@ -1,5 +1,5 @@
 <h1>
-  <%= link_to "Home", site_path %> / Latest Features
+  <%= link_to "Home", site_path %> / Latest features
 </h1>
 <div class="row">
   <div class="col-md-12">
