--- a/app/views/feature_announcements/new.html.erb
+++ b/app/views/feature_announcements/new.html.erb
@@ -1,4 +1,4 @@
-<h1>New Feature Announcement</h1>
+<h1>New feature announcement</h1>
 
 <%= render 'form', feature_announcement: @feature_announcement %>
 
