--- a/app/views/site/reviewer_access.html.erb
+++ b/app/views/site/reviewer_access.html.erb
@@ -1,4 +1,4 @@
-<h1 class="text-center">Reviewer Access</h1>
+<h1 class="text-center">Reviewer access</h1>
 <div class="row">
   <div class="col-md-offset-2 col-md-8">
     <h3 class="text-center">Study: <%= @study.accession %></h3>
