--- a/app/views/studies/index.html.erb
+++ b/app/views/studies/index.html.erb
@@ -60,7 +60,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h4 class="text-center">Syncing Files and Permissions... Please Wait.</h4>
+        <h4 class="text-center">Syncing files and permissions... please wait.</h4>
       </div>
       <div class="modal-body">
         <div class="spinner-target" id="sync-modal-spinner"></div>
