--- a/app/views/studies/show.html.erb
+++ b/app/views/studies/show.html.erb
@@ -111,7 +111,7 @@
           </div>
         </div>
         <div class="col-md-6">
-          <h4>Gene Lists <span class="badge" id="precomputed-count"><%= @study.precomputed_scores.count %></span></h4>
+          <h4>Gene lists <span class="badge" id="precomputed-count"><%= @study.precomputed_scores.count %></span></h4>
           <div class="table-responsive">
             <table class="table table-condensed" id="precomputed">
               <thead>
