--- a/app/views/studies/sync_study.html.erb
+++ b/app/views/studies/sync_study.html.erb
@@ -3,7 +3,7 @@
 </script>
 <div class="row">
   <div class="col-sm-10">
-    <h1>Sync Study Data for '<%= @study.name %>' <%= render partial: 'initialize_study_label' %></h1>
+    <h1>Sync study data for '<%= @study.name %>' <%= render partial: 'initialize_study_label' %></h1>
   </div>
   <div class="col-sm-2">
     <p class="top-pad pull-right">
@@ -15,7 +15,7 @@
 </div>
 <% if params[:configuration_name].present? && @special_sync %>
   <div class="bs-callout bs-callout-default">
-    <h4>Specialized Sync for: <span class="label label-primary"><%= params[:configuration_name] %></span></h4>
+    <h4>Specialized sync for: <span class="label label-primary"><%= params[:configuration_name] %></span></h4>
     <p class="lead">Based on the type of workflow, some output files have been configured with their correct types & associations.  You may edit descriptions,
       but note that changing file types and associations can result in parse failures.</p>
   </div>
@@ -26,7 +26,7 @@
     <div class="panel panel-danger">
       <div class="panel-heading">
         <div class="panel-title">
-          <h4><%= link_to "<i class='fas fa-exclamation'></i> Orphaned Study Files <span class='fas fa-chevron-down toggle-glyph'></span>".html_safe, '#orphaned-study-files', class: 'red', 'data-toggle' => 'collapse' %></h4>
+          <h4><%= link_to "<i class='fas fa-exclamation'></i> Orphaned study files <span class='fas fa-chevron-down toggle-glyph'></span>".html_safe, '#orphaned-study-files', class: 'red', 'data-toggle' => 'collapse' %></h4>
         </div>
       </div>
       <div id="orphaned-study-files" class="panel-collapse collapse in unsynced">
@@ -46,7 +46,7 @@
     <div class="panel panel-info">
       <div class="panel-heading">
         <div class="panel-title">
-          <h4><%= link_to "<i class='fas fa-question'></i> Unsynced Study Files <span class='fas fa-chevron-down toggle-glyph'></span>".html_safe, '#unsynced-study-files', 'data-toggle' => 'collapse' %></h4>
+          <h4><%= link_to "<i class='fas fa-question'></i> Unsynced study files <span class='fas fa-chevron-down toggle-glyph'></span>".html_safe, '#unsynced-study-files', 'data-toggle' => 'collapse' %></h4>
         </div>
       </div>
       <div id="unsynced-study-files" class="panel-collapse collapse in unsynced">
@@ -69,7 +69,7 @@
     <div class="panel panel-warning">
       <div class="panel-heading">
         <div class="panel-title">
-          <h4><%= link_to "<i class='fas fa-question'></i> Unsynced Sequence Data Directories <span class='fas fa-chevron-down toggle-glyph'></span>".html_safe, '#unsynced-primary-directories', 'data-toggle' => 'collapse' %></h4>
+          <h4><%= link_to "<i class='fas fa-question'></i> Unsynced sequence data directories <span class='fas fa-chevron-down toggle-glyph'></span>".html_safe, '#unsynced-primary-directories', 'data-toggle' => 'collapse' %></h4>
         </div>
       </div>
       <div id="unsynced-primary-directories" class="panel-collapse collapse in unsynced">
@@ -90,7 +90,7 @@
     <div class="panel panel-default">
       <div class="panel-heading">
         <div class="panel-title">
-          <h4><%= link_to "<i class='fas fa-question'></i> Unsynced Miscellaneous Data Directories <span class='fas fa-chevron-down toggle-glyph'></span>".html_safe, '#unsynced-misc-directories', 'data-toggle' => 'collapse' %></h4>
+          <h4><%= link_to "<i class='fas fa-question'></i> Unsynced miscellaneous data directories <span class='fas fa-chevron-down toggle-glyph'></span>".html_safe, '#unsynced-misc-directories', 'data-toggle' => 'collapse' %></h4>
         </div>
       </div>
       <div id="unsynced-misc-directories" class="panel-collapse collapse in unsynced">
@@ -111,18 +111,18 @@
   <div class="panel panel-success">
     <div class="panel-heading">
       <div class="panel-title">
-        <h4><%= link_to "<i class='fas fa-check'></i> Synced Data <span class='fas fa-chevron-right toggle-glyph'></span>".html_safe, '#synced-data', 'data-toggle' => 'collapse', id: 'synced-data-panel-toggle' %></h4>
+        <h4><%= link_to "<i class='fas fa-check'></i> Synced data <span class='fas fa-chevron-right toggle-glyph'></span>".html_safe, '#synced-data', 'data-toggle' => 'collapse', id: 'synced-data-panel-toggle' %></h4>
       </div>
     </div>
     <div id="synced-data" class="panel-collapse collapse">
       <div class="panel-body">
-        <h4>Study Files</h4>
+        <h4>Study files</h4>
         <div id="synced-study-files">
           <% @synced_study_files.each do |sf| %>
             <div class="bs-callout bs-callout-primary" id="<%= sf.form_container_id %>">
               <%= render partial: 'synced_study_file_form', locals: {study_file: sf} %>
               <% if sf.is_bundle_parent? %>
-                <h4>Bundled Files</h4>
+                <h4>Bundled files</h4>
                 <% sf.bundled_files.each do |bundled_file| %>
                   <%= render partial: 'synced_bundled_study_file_form', locals: {study_file: bundled_file} %>
                 <% end %>
@@ -130,7 +130,7 @@
             </div>
           <% end %>
         </div>
-        <h4>Sequence Data & Other Directories</h4>
+        <h4>Sequence data & other directories</h4>
         <div id="synced-directory-listings">
           <% @synced_directories.each do |dir| %>
             <%= render partial: 'directory_listing_form', locals: {directory: dir} %>
