--- a/app/views/taxons/show.html.erb
+++ b/app/views/taxons/show.html.erb
@@ -27,7 +27,7 @@
 </div>
 <div class="row">
   <div class="col-sm-12">
-    <h4>Genome Assemblies</h4>
+    <h4>Genome assemblies</h4>
     <div class="table-responsive">
       <table class="table table-striped">
         <thead>
