Change overflow from scroll to auto

--- a/app/javascript/styles/_scatterPlot.scss
+++ b/app/javascript/styles/_scatterPlot.scss
@@ -10,7 +10,7 @@
 
 .scatter-legend {
   float: right;
-  overflow: scroll;
+  overflow: auto;
   margin-top: 10px;
   margin-right: 10px;
   // background-color: #E5EEF7;
