--- a/app/views/studies/initialize_study.html.erb
+++ b/app/views/studies/initialize_study.html.erb
@@ -1,4 +1,4 @@
-<% if FeatureFlaggable.merged_value_for('react_upload_wizard', current_user)  %>
+<% if !FeatureFlaggable.merged_value_for('react_upload_wizard', current_user)  %>
   <script type="text/javascript" nonce="<%= content_security_policy_script_nonce %>">
     // populate window.SCP.currentStudyFiles with information about all known StudyFiles
     window.SCP.currentStudyFiles = <%= @study.study_files.persisted.map(&:attributes).to_json.html_safe %>
