--- a/app/views/site/_study_settings_form.html.erb
+++ b/app/views/site/_study_settings_form.html.erb
@@ -20,7 +20,7 @@
   <div class="form-group row">
     <div class="col-md-4">
       <%= f.label :embargo, 'Data Release Date' %>&nbsp;<span class='fas fa-question-circle' data-toggle='tooltip' title='Setting a Data Release Date will prevent downloads for everyone except study owners & shared users, and will expire at 12AM on the date specified (leave blank to allow downloads)' data-placement='right'></span><br />
-      <%= f.text_field :embargo, class: 'form-control datepicker' %>
+      <%= f.date_field :embargo, class: 'form-control' %>
     </div>
     <div class="col-md-4">
       <%= f.label :public %><br />
