--- a/app/views/studies/initialize_study.html.erb
+++ b/app/views/studies/initialize_study.html.erb
@@ -189,7 +189,7 @@
         <div id="ordinations-target">
           <div class="well well-sm upload-wizard">
             <div class="row">
-              <h2 class="col-sm-12">Step 4. Upload Cluster / Spatial Files <small class="initialize-label" id="initialize_ordinations_form_completed"></small></h2>
+              <h2 class="col-sm-12">Step 4. Upload cluster / spatial files <small class="initialize-label" id="initialize_ordinations_form_completed"></small></h2>
               <p class="text-center"><%= link_to 'Cluster File', 'https://github.com/broadinstitute/single_cell_portal/blob/master/demo_data/cluster_example.txt', target: :_blank %></p>
             </div>
             <div class="row">
