--- a/app/views/branding_groups/_form.html.erb
+++ b/app/views/branding_groups/_form.html.erb
@@ -24,11 +24,11 @@
     <%= f.check_box :public, class: "form-check-input" %>
   </div>
   <div class="form-group">
-    <%= f.label :user_id, 'Associated User' %><br />
-    <%= f.select :user_id, options_from_collection_for_select(User.all, :id, :email, @branding_group.new_record? ? nil : @branding_group.user_id),
-                 {include_blank: 'Select a user account'}, class: 'form-control' %>
+    <%= f.label :user_ids, 'Curators' %><br />
+    <p class="help-block">Add/remove curator emails in a comma-delimited list (you may not remove yourself)</p>
+    <%= f.hidden_field :user_ids %>
+    <%= text_field_tag :curator_emails, @branding_group.curator_list.join(', '), class: 'form-control' %>
   </div>
-
   <div class="form-group">
     <%= f.label :external_link_url, 'External Link URL <span class="fas fa-question-circle" data-toggle="tooltip" data-placement="top" title="This link will be available in the \"Help & Resources\" dropdown inside the collection, as well as in the Collections Directory."></span>'.html_safe %>
     <%= f.text_field :external_link_url, class: 'form-control' %>
