--- a/app/views/branding_groups/edit.html.erb
+++ b/app/views/branding_groups/edit.html.erb
@@ -6,7 +6,8 @@
 
     <p>
       <%= scp_link_to "<span class='fas fa-search'></span> Show".html_safe, branding_group_path(@branding_group), class: 'btn btn-info' %>
-      <%= scp_link_to "<span class='fas fa-chevron-left'></span> Back".html_safe, branding_groups_path, class: 'btn btn-warning' %>
-    </p>
+      <%= scp_link_to "<span class='fas fa-chevron-left'></span> Back".html_safe,
+                      current_user.admin ? branding_groups_path : collection_list_navigate_path,
+                      class: 'btn btn-warning' %>    </p>
   </div>
 </div>
