--- a/app/views/branding_groups/index.html.erb
+++ b/app/views/branding_groups/index.html.erb
@@ -7,7 +7,7 @@
           <thead>
             <tr>
               <th>Name</th>
-              <th>User</th>
+              <th>Curators</th>
               <th># Studies</th>
               <th>Created</th>
               <th class="actions">Actions</th>
@@ -18,7 +18,7 @@
             <% @branding_groups.each do |branding_group| %>
               <tr id="<%= branding_group.name_as_id %>">
                 <td class="branding-group-name"><%= link_to branding_group.name, site_path(scpbr: branding_group.name_as_id) %></td>
-                <td class="branding-group-user"><%= branding_group.user.email %></td>
+                <td class="branding-group-user"><%= branding_group.users.map(&:email).join(', ') %></td>
                 <td class="branding-group-study-count"><%= branding_group.studies.count %></td>
                 <td><%= branding_group.created_at.strftime('%Y-%m-%d %H:%M:%S') %></td>
                 <td class="actions">
